--- a/package.json
+++ b/package.json
@@ -17,20 +17,24 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.6",
+    "@hono/zod-validator": "^0.7.4",
     "@prisma/client": "^6.19.0",
     "@t3-oss/env-core": "^0.13.8",
     "better-auth": "^1.3.34",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "hono": "^4.10.4",
     "hono-pino": "^0.10.3",
     "http-status-codes": "^2.3.0",
+    "jsdom": "^27.1.0",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^20.11.17",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
